Issue #135: Add safepoint to standard logging options/analysis for unified logging consistency with JDK8 and earlier -XX:+PrintGCApplicationStoppedTime.